XIVY-16126 embellish Save Feature for Soap and Rest